syntax = "proto3";

package dns;

option go_package = "github.com/lack-io/vine/proto/services/network/dns;dns";

service Dns {
  rpc Advertise(AdvertiseRequest) returns (AdvertiseResponse);
  rpc Remove(RemoveRequest) returns (RemoveResponse);
  rpc Resolve(ResolveRequest) returns (ResolveResponse);
}

// Define a message to register a DNS record
message Record {
  // e.g. example.com
  string name = 1;
  // e.g. 127.0.0.1
  string value = 2;
  // e.g. A, AAAA, TXT, SRV, ...
  string type = 3;
  // MX and SRV records have priority
  uint32 priority = 4;
  // TTL
  uint32 ttl = 5;
}

message AdvertiseRequest {
  // Send an arbitrary number of records to advertise
  repeated Record records = 1;
}

message AdvertiseResponse {}

message RemoveRequest {
  // Send an arbitrary number of records to remove
  repeated Record records = 1;
}

message RemoveResponse {}

message ResolveRequest {
  string name = 1;
  string type = 2;
}

message ResolveResponse {
  // Return any matching records
  repeated Record records = 1;
}
